--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dubai Pet Import Cost Estimator</title>
+    <title>Sandy Paws Import Charges Calculator</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -100,7 +100,7 @@
     </style>
 </head>
 <body>
-    <h1>Dubai Pet Import Cost Estimator</h1>
+    <h1>Sandy Paws Import Charges Calculator</h1>
     
     <div class="form-container">
         <div class="pet-counts">
