--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     
                     // Dubai handling charges
                     if (dubaiHandler === 'emirates') {
-                        handlingCharges = 205 * totalPets;
+                        handlingCharges = 205;
                     } else { // dnata
                         handlingCharges = (totalPets === 1) ? 667 : 667 + (350 * (totalPets - 1));
                     }
